# podcast-marker

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/podcast-marker/: __init__.py  audio_gen.py  gitlab_api.py  main.py  markdown_gen.py
